--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -276,7 +276,7 @@
                 </div>
                 <div class="col-sm">
                     <div class="preside">
-                        <img src="/political-na-postsovet-space/country/russia/Vladimir_Vladimirovich_Putin.jpg" alt="">
+                        <img src="/political-na-postsovet-space/country/russia/Vladimir_Vladimirovich_Putin.png" alt="">
                         <figcaption>Владимир Владимирович Путин - второй президент Российской Федерации</figcaption>
                     </div>
                 </div>
