--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -586,23 +586,23 @@
             <div class="president">
                 <h3>Фото Президентов Российской Федерации</h3>
                 <div class="elsin">
-                    <img src="/political-na-postsovet-space/country/russia/Boris.jpg" alt="" class="pres">
+                    <img src="/political-na-postsovet-space/country/russia/Boris.png" alt="" class="pres">
 
                     <figcaption>Борис <br>
                         Николаевич Ельцин </figcaption>
                 </div>
                 <div class="putin">
-                    <img src="/political-na-postsovet-space/country/russia/Vladimir_Vladimirovich_Putin.jpg" alt=""
+                    <img src="/political-na-postsovet-space/country/russia/Vladimir_Vladimirovich_Putin.png" alt=""
                         class="pres">
                     <figcaption>Владимир Владимирович Путин <br> <i>(1 и 2 президентские сроки)</i></figcaption>
                 </div>
                 <div class="medvedev">
-                    <img src="/political-na-postsovet-space/country/russia/Dmitry_Anatolyevich_Medvedev.jpg" alt=""
+                    <img src="/political-na-postsovet-space/country/russia/Dmitry_Anatolyevich_Medvedev.png" alt=""
                         class="pres">
                     <figcaption>Дмитрий <br> Анатольевич Медведев</figcaption>
                 </div>
                 <div class="putin">
-                    <img src="/political-na-postsovet-space/country/russia/Vladimir_Vladimirovich_Putin_(2nd_Presidency).jpg"
+                    <img src="/political-na-postsovet-space/country/russia/Vladimir_Vladimirovich_Putin_(2nd_Presidency).png"
                         alt="" class="pres">
                     <figcaption>Владимир Владимирович Путин <br><i>(3 и 4 президентские сроки)</i></figcaption>
                 </div>
