--- a/country/russia/russian-tradition/index.html
+++ b/country/russia/russian-tradition/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="col-sm">
                     <div class="preside">
-                        <img src="/political-na-postsovet-space/country/russia/Dmitry_Anatolyevich_Medvedev.jpg" alt="">
+                        <img src="/political-na-postsovet-space/country/russia/Dmitry_Anatolyevich_Medvedev.png" alt="">
                         <figcaption>Дмитрий Анатольевич Медведев - третий президент Российской Федерации</figcaption>
                     </div>
                 </div>
