--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -271,7 +271,8 @@
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
                     <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
-                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика Конфиденциальности</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика
+                            Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
                 <div class="col-sm">
@@ -289,28 +290,26 @@
                     <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
                     <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
                 </div>
-                <div class="col-sm country">
-                    <p><b><a href="/political-na-postsovet-space/country/russia/"> <img
+                <div class="col-sm country gimn">
+
+                    <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
                                     src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
-                                    class="fr" alt=""> Россия</a></b></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/"> <img
-                                src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"
-                                class="fr" alt=""> Основная информация</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/"> <img
-                                src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia-before-1993.png"
-                                class="fr" alt="">Государственные символы</a>
+                                    class="fr" alt=""></a></b></p>
+                    <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> Россия</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/"> Основная информация</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/"> Государственные
+                            символы</a>
                     </p>
-                    <p><a href="/political-na-postsovet-space/country/russia/russian-tradition/"> <img
-                                src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia-before-1993.png"
-                                class="fr" alt=""> Наши русские традиции</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/president/"> <img
-                                src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-RSFSR.png"
-                                class="fr" alt=""> Президент Российской
+                    <p><a href="/political-na-postsovet-space/country/russia/russian-tradition/"> Наши русские
+                            традиции</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/president/"> Президент Российской
                             Федераци</a></p>
-                    <p><a target="_blank" href="http://kremlin.ru"> <img
-                                src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-RSFSR.png"
-                                class="fr" alt="">Сайт президента РФ</a></p>
+                    <p><a target="_blank" href="http://kremlin.ru">Сайт президента РФ</a></p>
+                    <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
+                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"
+                                    class="fr" alt=""></a></b></p>
                 </div>
+
 
 
 
