--- a/country/ussr/index.html
+++ b/country/ussr/index.html
@@ -397,16 +397,20 @@
 
                 </div>
                 <div class="col-sm country">
-                    <p><b><a href="/political-na-postsovet-space/country/ussr/"><img src="gerb-of-USSR.png" class="fr"
-                                    alt=""> СССР</a></b></p>
-                    <p><a href="/political-na-postsovet-space/country/ussr/"><img src="flag-of-USSR.png" class="fr"
-                                alt=""> Основная информация</a></p>
-                    <p><a href="/political-na-postsovet-space/country/ussr/gos-simvolika/"><img
-                                src="1024px-Coat_of_arms_of_the_Soviet_Union_(1923–1936).svg.png" alt="" class="fr">
+                    <p><a href="/political-na-postsovet-space/country/ussr/"><img
+                                src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" class="fr" alt=""></a>
+                    </p>
+                    <p><b><a href="/political-na-postsovet-space/country/ussr/"> СССР</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/ussr/"> Основная информация</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ussr/gos-simvolika/">
                             Государственные символы</a>
                     </p>
                     <p><a href="/political-na-postsovet-space/country/ussr/Leaders-of-the-USSR/">Руководители СССР</a>
                     </p>
+                    <p><a href="/political-na-postsovet-space/country/ussr/"><img
+                                src="/political-na-postsovet-space/country/ussr/flag-of-USSR.png" class="fr" alt=""></a>
+                    </p>
+
                 </div>
 
 
