--- a/country/ussr/Leaders-of-the-USSR/index.html
+++ b/country/ussr/Leaders-of-the-USSR/index.html
@@ -124,12 +124,20 @@
 
                 </div>
                 <div class="col-sm country">
-                    <p><b><a href="/political-na-postsovet-space/country/ussr/">СССР</a></b></p>
-                    <p><a href="/political-na-postsovet-space/country/ussr/">Основная информация</a></p>
-                    <p><a href="/political-na-postsovet-space/country/ussr/gos-simvolika/">Государственные символы</a>
+                    <p><a href="/political-na-postsovet-space/country/ussr/"><img
+                                src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" class="fr" alt=""></a>
+                    </p>
+                    <p><b><a href="/political-na-postsovet-space/country/ussr/"> СССР</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/ussr/"> Основная информация</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ussr/gos-simvolika/">
+                            Государственные символы</a>
                     </p>
                     <p><a href="/political-na-postsovet-space/country/ussr/Leaders-of-the-USSR/">Руководители СССР</a>
                     </p>
+                    <p><a href="/political-na-postsovet-space/country/ussr/"><img
+                                src="/political-na-postsovet-space/country/ussr/flag-of-USSR.png" class="fr" alt=""></a>
+                    </p>
+
                 </div>
 
 
