--- a/for-users/index.html
+++ b/for-users/index.html
@@ -18,7 +18,7 @@
     <header>
         <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
         <a href="/political-na-postsovet-space/for-users/">Для Пользователя</a>
-      
+
         <div>
             <a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a>
             <a href="/political-na-postsovet-space/for-users/legal/">Пользовательское соглашение</a>
@@ -51,7 +51,14 @@
                 <li>Как сказано в <a href="legal/#2" class="sos">пункте 2</a> мы не несем ответственности за то, как вы
                     будуте использовать скачанные файлы
                 </li>
-                <li>Так как на Гимне РФ нет авторских вы прав вы можете делать с ним, что хотите.</li>
+                <li> Как сказано в <a target="_blank" class="sos"
+                        href="https://ru.wikisource.org/wiki/Гражданский_кодекс_РФ/Глава_70#Статья_1259._Объекты_авторских_прав">
+                        статье 1259.6
+                    </a>
+                    ГК РФ государственные символы и знаки (флаги, гербы, ордена, денежные знаки и тому подобное), а
+                    также символы и знаки муниципальных образований не обладают авторскими правами, поэтому с Флагом,
+                    Гербом и Гимном РФ вы можете делать, что вам угодно.
+                </li>
             </ol>
             <h2>Небольшая информация для разделов: <a href="legal/" class="sos">Пользовательское соглашение</a> и <a
                     href="legal/confidential/" class="sos">Политика
@@ -79,15 +86,20 @@
                 </div>
                 <div class="col-sm">
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
-                    <p><a href="/political-na-postsovet-space/for-users/contacts/"> <img src="headphones.svg" alt="" class="fr"> Поддержка</a></p>
-                    <p><a href="/political-na-postsovet-space/for-users/legal/"> <img src="info.svg" alt="" class="fr"> Правовая информация</a></p>
-                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/"> <img src="info.svg" alt="" class="fr"> Политика
+                    <p><a href="/political-na-postsovet-space/for-users/contacts/"> <img src="headphones.svg" alt=""
+                                class="fr"> Поддержка</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/"> <img src="info.svg" alt="" class="fr">
+                            Правовая информация</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/"> <img src="info.svg" alt=""
+                                class="fr"> Политика
                             Конфиденциальности</a></p>
-                    <p><a href="/political-na-postsovet-space/for-users/files/"> <img src="free-icon-download-117446.svg" alt="" class="fr">Скачать файлы</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/files/"> <img
+                                src="free-icon-download-117446.svg" alt="" class="fr">Скачать файлы</a></p>
                 </div>
 
                 <div class="col-sm country">
-                    <p><b><a href="/political-na-postsovet-space/country/"><img src="pl.svg" alt="" class="fr"> Страны</a></b></p>
+                    <p><b><a href="/political-na-postsovet-space/country/"><img src="pl.svg" alt="" class="fr">
+                                Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
