--- a/for-users/legal/index.html
+++ b/for-users/legal/index.html
@@ -18,14 +18,14 @@
     <header>
         <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
         <a href="/political-na-postsovet-space/for-users/">Для Пользователя</a>
-      
+
         <div>
             <a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a>
             <a href="/political-na-postsovet-space/for-users/legal/" id="id">Пользовательское соглашение</a>
             <a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика Конфиденциальности</a>
             <a href="/political-na-postsovet-space/for-users/files/">Скачать Файлы</a>
         </div>
-    
+
     </header>
     <main>
         <div class="container">
@@ -52,7 +52,9 @@
                         <li>За издевальетство над скачаным контентом ответственность вы несёте сами
                             <ol>
                                 <li>За издевательство и надругательство над символами РФ и СССР вы несете
-                                    ответственность по статье 329 УК РФ.</li>
+                                    ответственность по статье <a class="sos" target="_blank"
+                                        href="https://ru.wikisource.org/wiki/Уголовный_кодекс_Российской_Федерации/Глава_32#Статья_329">
+                                        329 УК РФ</a>.</li>
                                 <li>За издевательство и надругательство над символами РБ и СССР вы несете
                                     ответственность по статье 370 УК РБ.</li>
                                 <li>За издевательство и надругательство над символами Украины вы несете ответственность
@@ -114,7 +116,7 @@
                     </ol>
                 </li>
             </ol>
-<br>
+            <br>
         </div>
 
 
@@ -133,13 +135,14 @@
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
                     <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
-                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика Конфиденциальности</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика
+                            Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
 
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
-                    <p>  <a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
+                    <p> <a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
                     <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
