--- a/country/belarus/gos-simvolika/index.html
+++ b/country/belarus/gos-simvolika/index.html
@@ -189,10 +189,17 @@
                     <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
                 </div>
                 <div class="col-sm country">
+                    <p><a href="/political-na-postsovet-space/country/belarus/"><img
+                                src="/political-na-postsovet-space/country/belarus/gos-simvolika/gerb-of-Belarus.png"
+                                alt="" class="fr"></a></p>
                     <p><b><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Основная информация</a></p>
-                    <p><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/">Государственные символы
-                        </a></p>
+                    <p><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/">Государственные
+                            символы</a></p>
+                    <p><a href="/political-na-postsovet-space/country/belarus/"><img
+                                src="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-Belarus.png"
+                                alt="" class="fr"></a></p>
+                </div>
 
                 </div>
                 
