--- a/country/ukraine/gos-simvolika/index.html
+++ b/country/ukraine/gos-simvolika/index.html
@@ -94,9 +94,11 @@
                 </div>
             </div>
         </div>
+        <br>
     </main>
     <footer>
         <div class="container">
+            <hr>
             <div class="row">
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
@@ -119,8 +121,23 @@
                     <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
                     <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
                 </div>
+                <div class="col-sm country">
+                    <p><a href="/political-na-postsovet-space/country/ukraine/"><img
+                                src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt=""
+                                class="fr"></a></p>
+                    <p><b><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/ukraine/">Основная информация</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ukraine/gos-system/">Государственная
+                            устройство</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/">Государственная
+                            символика</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ukraine/"><img
+                                src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" alt=""
+                                class="fr"></a></p>
+                </div>
+                <hr>
+                <br>
             </div>
-        </div>
     </footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
         integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
