--- a/country/ukraine/index.html
+++ b/country/ukraine/index.html
@@ -97,6 +97,7 @@
     </main>
     <footer>
         <div class="container">
+            <hr>
             <div class="row">
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
@@ -105,7 +106,8 @@
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
                     <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
-                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика Конфиденциальности</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика
+                            Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
 
@@ -118,7 +120,23 @@
                     <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
                     <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
                 </div>
+                <div class="col-sm country">
+                    <p><a href="/political-na-postsovet-space/country/ukraine/"><img
+                                src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt=""
+                                class="fr"></a></p>
+                    <p><b><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/ukraine/">Основная информация</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ukraine/gos-system/">Государственная
+                            устройство</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/">Государственная
+                            символика</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ukraine/"><img
+                                src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" alt=""
+                                class="fr"></a></p>
+                </div>
             </div>
+            <hr>
+            <br>
         </div>
     </footer>
 
