--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
+        <a href="/political-na-postsovet-space/">Постсоветское <br> пространство</a>
         <a href="/political-na-postsovet-space/news">Последние новости</a>
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
@@ -39,14 +39,31 @@
     <main>
         <div class="container">
             <h1>Государственные символы России</h1>
+
             <p>
                 Государственные символы России — установленные федеральными конституционными законами особые
                 отличительные знаки России, олицетворяющие её национальный суверенитет и самобытность, несущие
                 определённый идеологический смысл. Таковыми символами являются: государственный флаг, герб и гимн.
             </p>
+            <details open="open">
+                <summary>Содержание</summary>
+                <ol>
+                  <li><a href="#герб">Герб РФ</a></li>
+                  <li><a href="#флаг">Флаг РФ</a>
+                <ol>
+                    <li><a href="#Использование_флага_России">Использование флага России</a></li>
+                </ol>
+                </li>
+                  <li><a href="#Гимн">Гимн РФ</a>
+                <ol>
+                    <li><a href="#Текст_Гимна_РФ">Текст Гимна РФ</a></li>
+                </ol>
+                </li>
+                </ol>
+            </details>
 
 
-            <h2>Государственный герб России</h2>
+            <h2 id="герб">Государственный герб России</h2>
             <hr>
             <br>
             <div class="photol"><img src="gerb-of-Russia-before-1993.png" alt="" width="250px">
@@ -61,7 +78,7 @@
                 расправленные крылья. Орёл увенчан
                 двумя
                 малыми
-            <div class="photo"><img src="gerb-of-Russia.png" width="250px">
+            <div class="photo"><img src="emblem_red-bg.svg" width="250px">
                 <figcaption>Герб России 1993-н. в.</figcaption>
             </div>
             коронами и — над ними — одной большой короной, соединёнными
@@ -82,7 +99,7 @@
             <br><br><br><br><br>
 
 
-            <h2>Государственный флаг России</h2>
+            <h2 id="флаг">Государственный флаг России</h2>
             <hr>
             <br>
 
@@ -110,13 +127,13 @@
 
             <br>
 
-            <div class="photo"><img src="flag-of-Russia.png" width="250px">
+            <div class="photo"><img src="flag.svg" width="250px">
                 <figcaption>Флаг России 1993-н. в.</figcaption>
             </div>
 
             <br>
             <br>
-            <h3>Использование флага России</h3>
+            <h3 id="Использование_флага_России">Использование флага России</h3>
             <br>
             <p>Порядок использования государственного флага определяется Федеральным законом. Законом описаны
                 случаи, в
@@ -148,7 +165,7 @@
             <br>
             <br>
             <div class="flags">
-                <h2>Государственный гимн России</h2>
+                <h2 id="Гимн">Государственный гимн России</h2>
                 <hr>
                 <br>
                 <p>
@@ -170,7 +187,7 @@
                 </p>
                 <br>
 
-                <h3>Текст гимна Российской Федерации</h3>
+                <h3 id="Текст_Гимна_РФ">Текст гимна Российской Федерации</h3>
 
                 <div class="gimn">
 
@@ -275,12 +292,7 @@
                             Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
-                <div class="col-sm">
-                    <div class="preside">
-                        <img src="/political-na-postsovet-space/country/russia/Vladimir_Vladimirovich_Putin.png" alt="">
-                        <figcaption>Владимир Владимирович Путин - второй президент Российской Федерации</figcaption>
-                    </div>
-                </div>
+
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
@@ -293,7 +305,7 @@
                 <div class="col-sm country gimn">
 
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
-                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
+                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_red-bg.svg"
                                     class="fr" alt=""></a></b></p>
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> Россия</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/russia/"> Основная информация</a></p>
@@ -306,8 +318,8 @@
                             Федераци</a></p>
                     <p><a target="_blank" href="http://kremlin.ru">Сайт президента РФ</a></p>
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
-                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"
-                                    class="fr" alt=""></a></b></p>
+                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/flag.svg" class="fr"
+                                    alt=""></a></b></p>
                 </div>
 
 
