--- a/country/belarus/index.html
+++ b/country/belarus/index.html
@@ -157,37 +157,37 @@
                         <td>1</td>
 
                         <td rowspan="6">Александр Григорьевич Лукашенко <br> (р. 1954)</td>
-                        <td>20 июля 1994</td>
-                        <td>20 сентября 2001</td>
+                        <td>20 <br> июля <br> 1994</td>
+                        <td>20 <br> сентября <br> 2001</td>
 
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>20 сентября 2001</td>
-                        <td>8 апреля 2006</td>
+                        <td>20 <br> сентября <br> 2001</td>
+                        <td>8 <br> апреля <br> 2006</td>
 
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>8 апреля 2006</td>
-                        <td>21 января 2011</td>
+                        <td>8 <br> апреля <br> 2006</td>
+                        <td>21 <br> января <br> 2011</td>
 
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>21 января 2011</td>
-                        <td>6 ноября 2015</td>
+                        <td>21 <br> января <br> 2011</td>
+                        <td>6 <br> ноября <br> 2015</td>
 
                     </tr>
                     <tr>
                         <td>5</td>
-                        <td>6 ноября 2015</td>
-                        <td>23 сентября 2020</td>
+                        <td>6 <br> ноября <br> 2015</td>
+                        <td>23 <br> сентября <br> 2020</td>
 
                     </tr>
                     <tr>
                         <td>6</td>
-                        <td>23 сентября 2020</td>
+                        <td>23 <br> сентября <br> 2020</td>
                         <td>н. в.</td>
 
                     </tr>
@@ -248,7 +248,6 @@
                     <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
                 </div>
                 <div class="col-sm country">
-                    <hr>
                     <p><a href="/political-na-postsovet-space/country/belarus/"><img
                                 src="/political-na-postsovet-space/country/belarus/gos-simvolika/gerb-of-Belarus.png"
                                 alt="" class="fr"></a></p>
