--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -354,12 +354,7 @@
                             Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
-                <div class="col-sm">
-                    <div class="preside">
-                        <img src="Boris.png" alt="">
-                        <figcaption>Борис Николаевич Ельцин - первый президент Российской Федерации</figcaption>
-                    </div>
-                </div>
+          
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
@@ -371,9 +366,10 @@
 
                 </div>
                 <div class="col-sm country gimn">
+                    <hr>
 
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
-                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
+                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_red-bg.svg"
                                     class="fr" alt=""></a></b></p>
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> Россия</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/russia/"> Основная информация</a></p>
@@ -392,8 +388,9 @@
 
 
             </div>
-
+<hr>
             <br>
+
 
         </div>
     </footer>
