--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -48,17 +48,17 @@
             <details open="open">
                 <summary>Содержание</summary>
                 <ol>
-                  <li><a href="#герб">Герб РФ</a></li>
-                  <li><a href="#флаг">Флаг РФ</a>
-                <ol>
-                    <li><a href="#Использование_флага_России">Использование флага России</a></li>
-                </ol>
-                </li>
-                  <li><a href="#Гимн">Гимн РФ</a>
-                <ol>
-                    <li><a href="#Текст_Гимна_РФ">Текст Гимна РФ</a></li>
-                </ol>
-                </li>
+                    <li><a href="#герб">Герб РФ</a></li>
+                    <li><a href="#флаг">Флаг РФ</a>
+                        <ol>
+                            <li><a href="#Использование_флага_России">Использование флага России</a></li>
+                        </ol>
+                    </li>
+                    <li><a href="#Гимн">Гимн РФ</a>
+                        <ol>
+                            <li><a href="#Текст_Гимна_РФ">Текст Гимна РФ</a></li>
+                        </ol>
+                    </li>
                 </ol>
             </details>
 
@@ -242,24 +242,112 @@
                             музыку</a>.
                     </audio>
                 </div>
-            </div>
+                <h2 id="Символ_Российского_рубля">Символ Российского рубля &#8381;</h2>
+                <hr>
 
-            <hr>
-            <div class="VK">
-                <!-- Put this script tag to the <head> of your page -->
-                <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+                <p>
+                    <b> Символ </b> или <b> знак российского рубля (₽) </b> — типографский знак, который входит в группу
+                    «Знаки валют»
+                    (англ. Currency Symbols) стандарта Юникод и называется «Символ рубля» (англ. Ruble sign); код —
+                    U+20BD. Используется, главным образом, для представления национальной валюты Российской Федерации —
+                    рубля.
+                </p>
+            
+                <p>
+                    Характерные знаки, имеющие это назначение: р. • руб. • <b> ₽ </b>. Кроме того, для краткого
+                    представления
+                    российского рубля используются коды стандарта ISO 4217: с 1998 года RUB и 643, ранее RUR и 810.
+                </p>
+                <br>
+                <h3>Начертание</h3>
+                <hr>
 
-                <script type="text/javascript">
-                    VK.init({ apiId: 7752244, onlyWidgets: true });
-                </script>
+                <p>
+                    Символ «₽» был утверждён в качестве официального знака российского рубля советом директоров Банка
+                    России 11 декабря 2013 года. Как отмечено в официальном сообщении Банка России об утверждении
+                    символа, «графическое обозначение рубля в виде знака представляет собой прописную букву „Р“
+                    кириллического алфавита, дополненную в нижней части горизонтальной чертой, создающей впечатление
+                    присутствия двух параллельных линий, что символизирует устойчивое положение российского рубля».
+                </p>
+                <br>
+                <h3>Использование символа</h3>
+                <hr>
+                <div class="photo"><img src="rubl/RR5709-0001R.png" width="250px">
+                    <br><br>
+                    <img src="rubl/Russian_1_ruble_coin_of_2014_-_RR5709-0001.png" alt="" width="250px">
+                    <figcaption>Монета 2014 года достоинством 1 рубль</figcaption>
+                </div>
+                <p>
+                    Символ «₽» используется, главным образом, для представления национальной валюты Российской Федерации
+                    — рубля.
+                </p>
+                <p>
+                    Этот знак был утверждён Центральным банком Российской Федерации 11 декабря 2013 года в соответствии
+                    с одной из его функций, установленной в 4-й статье Федерального закона «О Центральном банке
+                    Российской Федерации (Банке России)». Выбор знака был произведён из пяти вариантов по итогам
+                    интернет-опроса, проведённого на сайте банка с 5 ноября по 5 декабря 2013 года. В предложении о
+                    включении символа в стандарт Юникод, которое было подготовлено специалистами Банка России,
+                    отмечалось, что выбранный знак уже несколько лет использовался в деловом обороте, а его официальное
+                    утверждение должно ускорить широкое распространение знака во внутрироссийском и международном
+                    банковских сообществах. Кроме того, сообщалось, что уже в 2014 году Банк России планирует поместить
+                    знак на некоторые разновидности монет, а в будущем использовать его и в оформлении банкнот.
+                </p>
+                <h4>Символ рубля на монетах</h4>
+                <p>
+                    Такие монеты были выпущены в обращение 17 июня 2014 года: памятные монеты из серебра номиналом 3
+                    рубля, а также монеты из стали с никелевым гальваническим покрытием номиналом 1 рубль. Серебряные
+                    монеты выпущены ограниченным тиражом: с качеством «пруф» 500 штук, качеством «анциркулейтед» 1000
+                    штук. Монеты достоинством 1 рубль выпускаются в рамках эмиссионной программы тиражом 100 миллионов
+                    штук.
+                </p>
+                <h4>
+                    Символ рубля в компьютерах
+                </h4>
+                <p>
+                    На момент принятия символ неофициально использовался много лет, однако в Юникоде его не было:
+                    консорциум ждал официального принятия. Шрифтовые дизайнеры ставили символ рубля в нескольких
+                    незадействованных позициях Юникода, надеясь, что рано или поздно в одной из них знак всё же
+                    утвердят; за это время в позиции 20B9<sub>16</sub> появилась индийская рупия и в 20BA — турецкая
+                    лира.
+                    Многие сайты использовали типографские трюки через CSS или подключали специальный шрифт со
+                    знаком рубля.
+                </p>
+                <p>
+                    Когда символ рубля официально приняли, в Юникоде нашли похожую на него армянскую букву «ке» (Ք,
+                    0554<sub>16</sub>). Консорциум даже попросил не использовать эту букву.
+                </p>
+                <p>
+                    21 января 2014 года российским техническим комитетом по стандартизации «Информационные технологии»
+                    (ТК22), который является российским национальным рабочим органом СТК1 ИСО/МЭК, была подана
+                    заявка в Технический комитет «Юникод» на добавление символа рубля — 20BD16 Ruble Sign (₽) — в набор
+                    символов Unicode. 4 февраля 2014 года на 138 заседании Технического комитета «Юникод» в Сан-Хосе
+                    на основании этой заявки было принято решение о включении символа рубля в стандарт Unicode версии
+                    7.0, и этот знак появился в Юникоде 7.0, выпущенном 16 июня 2014 года.
+                </p>
+                <p>
+                    Отображение символа рубля зависит от версий файлов шрифтов, установленных на персональном компьютере
+                    пользователя. Даже если на сервере шрифты его содержат, у внешнего пользователя версия может быть
+                    без символа и отображения не будет, или будет отображаться глиф из другого шрифта.
+                </p>
 
-                <!-- Put this div tag to the place, where the Comments block will be -->
-                <div id="vk_comments"></div>
-                <script type="text/javascript">
-                    VK.Widgets.Comments("vk_comments", { limit: 20, attach: "*" });
-                </script>
+                <hr>
+                <div class="VK">
+                    <!-- Put this script tag to the <head> of your page -->
+                    <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+
+                    <script type="text/javascript">
+                        VK.init({ apiId: 7752244, onlyWidgets: true });
+                    </script>
+
+                    <!-- Put this div tag to the place, where the Comments block will be -->
+                    <div id="vk_comments"></div>
+                    <script type="text/javascript">
+                        VK.Widgets.Comments("vk_comments", { limit: 20, attach: "*" });
+                    </script>
+                </div>
             </div>
             <br>
+
         </div>
     </main>
 
