--- a/country/index.html
+++ b/country/index.html
@@ -2,6 +2,25 @@
 <html lang="ua">
 
 <head>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(73002322, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true
+        });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/73002322" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -279,7 +298,8 @@
                     <p> <b><a href="/political-na-postsovet-space/for-users/index.html"> Для пользователя </a></b></p>
                     <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
-                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика Конфиденциальности</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика
+                            Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
 
                     <div class="preside">
@@ -290,12 +310,24 @@
                 </div>
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
-                    <p>  <a href="/political-na-postsovet-space/country/ussr/"><img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="fr"> СССР</a></p>
-                    <p><a href="/political-na-postsovet-space/country/belarus/"><img src="/political-na-postsovet-space/country/belarus/gos-simvolika/gerb-of-Belarus.png" alt="" class="fr"> Беларусь</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/"><img src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png" alt="" class="fr"> Россия</a></p>
-                    <p><a href="/political-na-postsovet-space/country/ukraine/"><img src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt="" class="fr"> Украина</a></p>
-                    <p><a href="/political-na-postsovet-space/country/dni/"><img src="/political-na-postsovet-space/country/dni/gos-simvolika/gerb-of-Dni.png" alt="" class="fr"> ДНР</a></p>
-                    <p><a href="/political-na-postsovet-space/country/lnr/"><img src="/political-na-postsovet-space/country/lnr/gos-simvolika/gerb-of-Lnr.png" alt="" class="fr"> ЛНР</a></p>
+                    <p> <a href="/political-na-postsovet-space/country/ussr/"><img
+                                src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="fr">
+                            СССР</a></p>
+                    <p><a href="/political-na-postsovet-space/country/belarus/"><img
+                                src="/political-na-postsovet-space/country/belarus/gos-simvolika/gerb-of-Belarus.png"
+                                alt="" class="fr"> Беларусь</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/"><img
+                                src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
+                                alt="" class="fr"> Россия</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ukraine/"><img
+                                src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt=""
+                                class="fr"> Украина</a></p>
+                    <p><a href="/political-na-postsovet-space/country/dni/"><img
+                                src="/political-na-postsovet-space/country/dni/gos-simvolika/gerb-of-Dni.png" alt=""
+                                class="fr"> ДНР</a></p>
+                    <p><a href="/political-na-postsovet-space/country/lnr/"><img
+                                src="/political-na-postsovet-space/country/lnr/gos-simvolika/gerb-of-Lnr.png" alt=""
+                                class="fr"> ЛНР</a></p>
 
                 </div>
 
