--- a/index.html
+++ b/index.html
@@ -2,6 +2,25 @@
 <html lang="ua">
 
 <head>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(73002322, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true
+        });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/73002322" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="yandex-verification" content="b64609ce82e285b9" />
@@ -38,7 +57,7 @@
                 перемешалось после нахождения в составе СССР.
                 Мы вместе воевали в войнах, гуляли и т.д. Но в последнее время Украина отдаляется от Беларусси и сильно
                 отдаляется от России. Они думают что под США им будет лучше, но это не так.
-             </p>
+            </p>
 
 
             <hr>
