--- a/country/ussr/gos-simvolika/index.html
+++ b/country/ussr/gos-simvolika/index.html
@@ -6,6 +6,25 @@
 <html lang="ru">
 
 <head>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(73002322, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true
+        });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/73002322" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/ussr/style.css">
@@ -188,35 +207,35 @@
                 <p>Сплотила навеки Великая Русь.</p>
                 <p>Да здравствует созданный волей народов</p>
                 <p>Единый, могучий Советский Союз!</p>
-<br>
+                <br>
                 <p>Славься, Отечество наше свободное,</p>
                 <p>Дружбы народов надёжный оплот!</p>
                 <p>Партия Ленина — сила народная</p>
-               <p> Нас к торжеству коммунизма ведёт!</p>
-<br>
+                <p> Нас к торжеству коммунизма ведёт!</p>
+                <br>
                 <p>Сквозь грозы сияло нам солнце свободы,</p>
                 <p>И Ленин великий нам путь озарил:</p>
                 <p>На правое дело он поднял народы,</p>
                 <p>На труд и на подвиги нас вдохновил!</p>
-<br>
+                <br>
                 <p>Славься, Отечество наше свободное,</p>
-               <p> Дружбы народов надёжный оплот!</p>
-               <p> Партия Ленина — сила народная</p>
-               <p> Нас к торжеству коммунизма ведёт!</p>
-<br>
-               <p> В победе бессмертных идей коммунизма</p>
+                <p> Дружбы народов надёжный оплот!</p>
+                <p> Партия Ленина — сила народная</p>
+                <p> Нас к торжеству коммунизма ведёт!</p>
+                <br>
+                <p> В победе бессмертных идей коммунизма</p>
                 <p>Мы видим грядущее нашей страны,</p>
                 <p>И Красному знамени славной Отчизны</p>
                 <p>Мы будем всегда беззаветно верны!</p>
-<br>
+                <br>
                 <p>Славься, Отечество наше свободное,</p>
-               <p>Дружбы народов надёжный оплот!</p>
+                <p>Дружбы народов надёжный оплот!</p>
                 <p>Партия Ленина — сила народная</p>
                 <p>Нас к торжеству коммунизма ведёт!</p>
                 <br><br>
-         
-            <h3>Музыка Гимна СССР</h3>
-        
+
+                <h3>Музыка Гимна СССР</h3>
+
                 <audio src="/political-na-postsovet-space/country/ussr/gimn-of-USSR.mp3" controls></audio>
             </div>
             <br>
