--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -2,6 +2,25 @@
 <html lang="ru">
 
 <head>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(73002322, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true
+        });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/73002322" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="gos-simvolika/style.css">
@@ -354,7 +373,7 @@
                             Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
-          
+
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
@@ -382,13 +401,13 @@
                             Федераци</a></p>
                     <p><a target="_blank" href="http://kremlin.ru">Сайт президента РФ</a></p>
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
-                        src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"
-                        class="fr" alt=""></a></b></p>
+                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"
+                                    class="fr" alt=""></a></b></p>
                 </div>
 
 
             </div>
-<hr>
+            <hr>
             <br>
 
 
