--- a/for-users/legal/confidential/index.html
+++ b/for-users/legal/confidential/index.html
@@ -2,6 +2,25 @@
 <html lang="ru">
 
 <head>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(73002322, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true
+        });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/73002322" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -18,14 +37,15 @@
     <header>
         <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
         <a href="/political-na-postsovet-space/for-users/">Для Пользователя</a>
-      
+
         <div>
             <a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a>
             <a href="/political-na-postsovet-space/for-users/legal/">Пользовательское соглашение</a>
-            <a href="/political-na-postsovet-space/for-users/legal/confidential/" id="id">Политика Конфиденциальности</a>
+            <a href="/political-na-postsovet-space/for-users/legal/confidential/" id="id">Политика
+                Конфиденциальности</a>
             <a href="/political-na-postsovet-space/for-users/files/">Скачать Файлы</a>
         </div>
-  
+
     </header>
     <main>
         <div class="container">
@@ -142,7 +162,7 @@
                 </li>
             </ol>
 
-<br>
+            <br>
         </div>
 
 
@@ -161,13 +181,14 @@
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
                     <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
-                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика Конфиденциальности</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика
+                            Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
 
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
-                    <p>  <a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
+                    <p> <a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
                     <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
