--- a/for-users/files/index.html
+++ b/for-users/files/index.html
@@ -2,6 +2,25 @@
 <html lang="ru">
 
 <head>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(73002322, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true
+        });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/73002322" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/political-na-postsovet-space/for-users/contacts/style.css">
@@ -15,22 +34,22 @@
     <header>
         <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
         <a href="/political-na-postsovet-space/for-users/">Для Пользователя</a>
-      
+
         <div>
             <a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a>
             <a href="/political-na-postsovet-space/for-users/legal/">Пользовательское соглашение</a>
             <a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика Конфиденциальности</a>
             <a href="/political-na-postsovet-space/for-users/files/" id="id">Скачать Файлы</a>
         </div>
-  
+
     </header>
     <main>
         <div class="container">
             <video src="/political-na-postsovet-space/KVXDPAMAOYlhUuw3puYG3txePUq7Quvn.mp4" controls
                 poster="/political-na-postsovet-space/FfFOMkwmWEvIFB2vPI37LXJ1t0Yd1q72.jpg"
                 style="width: 100%;"></video>
-         <h1>Скачать файлы со страниц:</h1>
-         <hr>
+            <h1>Скачать файлы со страниц:</h1>
+            <hr>
 
             <ul>
                 <li>
@@ -38,7 +57,7 @@
                     <ul>
                         <li><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/gerb-of-Belarus.png">Скачать
                                 герб РБ</a>
-                                ;
+                            ;
                         </li>
                         <li><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-Belarus.png">Скачать
                                 Флаг
@@ -49,7 +68,7 @@
                         <li>
                             <a href="/political-na-postsovet-space/country/belarus/Lukashenko.jpg">Скачать Фото
                                 Лукашенко</a>
-                                ;
+                            ;
                         </li>
                         <li>
                             <a href="/political-na-postsovet-space/country/belarus/gos-simvolika/gimn-of-Belarus.mp3">Скачать
@@ -166,7 +185,7 @@
 
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
-                    <p>  <a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
+                    <p> <a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
                     <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
