--- a/for-users/legal/index.html
+++ b/for-users/legal/index.html
@@ -134,6 +134,17 @@
                                 конфиденциальности</a></li>
                     </ol>
                 </li>
+                <li>
+                    <b>Бета-версия сайта</b>
+                    <ol>
+                        <li>У сайта есть Бета-версия, чтобы ее посмотреть перейдите по <a
+                                href="/political-na-postsovet-space/beta/" class="sos">Ссылке</a>.
+                            </li>
+                            <li>
+                                Вы тоже можете помочь с Бета-версией. Пишите ваши версии нам в Поддержку.
+                            </li>
+                    </ol>
+                </li>
             </ol>
             <br>
         </div>
